# fuel-mate

./: .env.example  .gitignore  CONTEXT.md  Dockerfile  LICENSE  README.md  alembic.ini  pyproject.toml  requirements-etl.txt  requirements.txt
.github/workflows/: diag-download.yml  diag-govuk.yml  etl.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
bot/: cards.py  config.py  db.py  keyboards.py  main.py  messages.py
bot/handlers/: favourites.py  help.py  search.py  settings.py  start.py
bot/repositories/: favourites.py  postcodes.py  stations.py  users.py
etl/: api_client.py  config.py  download.py  load_staging.py  pipeline.py  refresh_mart.py  upload_release.py
shared/: admin_notifier.py  csv_parser.py  geo.py  postcode_validator.py
sql/migrations/: 0001_init_schemas.sql  0002_raw_tables.sql  0003_staging_tables.sql  0004_mart_tables.sql  0005_app_tables.sql  0006_views.sql
tests/: conftest.py  test_api_parser.py  test_csv_parser.py  test_geo.py  test_load_staging.py  test_postcode_validator.py
tests/fixtures/: sample_fuel_data.csv
